fix photo groups
